# android-sdk-installer

./: README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
.github/workflows/: test.yml
src/android_sdk_installer/: __main__.py  core.py  tools.py
